# dwml-backend-django

./: .gitignore  .pre-commit-config.yaml  CI_PIPELINE_TEST_REPORT.md  Django_Tutorial.md  Dockerfile  Makefile  Pipfile  README.md  compose.yaml  env.example  openapi.yaml  pyproject.toml  requirements.txt  requirements_utf8.txt  setup.cfg
.github/workflows/: push.yml
Core/DWML_Core/: urls.py  wsgi.py
Core/api/: api_urls.py  api_views.py  models.py  tests.py
Core/api/migrations/: 0001_initial.py
Core/api/utils/: data_cache.py  data_collector.py
DWML_Core/: DudeWheresMyLambo.db  db.sqlite3  manage.py  pytest.ini  requirements.txt
DWML_Core/DWML_Core/: asgi.py  settings.py  urls.py
DWML_Core/api/: api_urls.py  api_views.py  schema.py  tests.py
DWML_Core/api/utils/: DataCache.py  DataCollector.py  data_collector.py
backend/: pytest.ini
backend/api/: admin.py  api_urls.py  api_views.py  authentication.py  middleware.py  pagination.py  permissions.py  schema.py  urls.py  validators.py
backend/api/migrations/: 0001_initial.py  0002_rename_models_safely.py
backend/api/models/: __init__.py  market_data.py  portfolio.py
backend/api/serializers/: __init__.py  analytics.py  market_data.py  portfolio.py
backend/api/services/: __init__.py  analytics_service.py  base_service.py  market_data_service.py  portfolio_service.py
backend/api/utils/: __init__.py  covid_scraper.py  data_cache.py  data_collector.py  graph_creator.py
backend/api/views/: __init__.py  analytics.py  compatibility.py  health.py  market_data.py  portfolio.py
backend/config/: __init__.py  celery.py  settings.py  urls.py
backend/domain/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/domain/migrations/: 0001_initial.py
backend/shared/: middleware.py
backend/shared/exceptions/: __init__.py  custom_exceptions.py
scripts/: create-prod-release.sh
tests/: __init__.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_models.py  test_serializers.py
workflows/: push.yml
